# regression-monkey-nonparametric

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  Regression-Monkey-Nonparametric-Statistics.epub  _quarto.yml  glossary.html  glossary.qmd  index.html  index.qmd  notation.html  notation.qmd  publish_quarto_book.sh  pyproject.toml  references.bib  references.html  robots.txt  ruff.toml  search.json  sitemap.xml  summary.html  summary.qmd
_extensions/leovan/pseudocode/: pseudocode.lua
_extensions/reveal_vspace/: _extension.yml  reveal_vspace.lua
_extensions/ryonakagami/shield_badge/: _extension.yml  shield_badge.lua
dataset/config/: dataset_sample.yml
include/badges/: python_version.json  quarto_version.json  uv_version.json
include/google_setup/: googletagmanager_in_body.html  googletagmanager_in_header.html
include/math/: mathjax.html
include/scss/: dark.scss  light.scss  style.scss
notes/density_estimation/: histogram.html  histogram.qmd  histogram_copy.html  introduction.html  introduction.qmd
posts/density_estimation/: chapter_header.html
posts/density_estimation/notes/: histogram.html
scripts/: update_python_badge.sh  update_quarto_badge.sh  update_uv_badge.sh
site_libs/bootstrap/: bootstrap-42d661d24e4f8d1bcb498b68b8f8bc02.min.css  bootstrap-dark-38ff5905b33d603b29cf758ff2a7c216.min.css  bootstrap-dark-6afdcbb8c7ffbd56dfe9d9a8b5577d03.min.css  bootstrap-ef4c7bdbcf99718f0eb8d015fee510bc.min.css
site_libs/quarto-contrib/reveal_vspace-1.0.0/: reveal_vspace.css
src/regression_monkey_nonparametric/: __init__.py
src/regression_monkey_nonparametric/eda/pandas/: summary.py
src/regression_monkey_nonparametric/utils/: __init__.py  dataset.py  setup.py
(+2 files in other folders)
